unpackaged/main/default/objects/pse__Proj__c/fields/pse__Hours_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours_Cut_Off_Date__c</fullName>
    <description>The date used to calculate a project's variance values. The date last week that corresponds to the last day in the project's work calendar is used. If no work calendar exists, last Sunday's date is used.</description>
    <inlineHelpText>The date used to calculate a project's variance values. The date last week that corresponds to the last day in the project's work calendar is used. If no work calendar exists, last Sunday's date is used.</inlineHelpText>
    <label>Hours Cut Off Date</label>
    <type>Date</type>
</CustomField>