unpackaged/main/default/objects/pse__Proj__c/fields/pse__Internal_Budget__c.field-meta.xml
<CustomField>
    <fullName>pse__Internal_Budget__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Sum of internal budgets entered on the Budget record</inlineHelpText>
    <label>Internal Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>