unpackaged/main/default/objects/pse__Proj__c/fields/pse__Internal_Time_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Internal_Time_Cost__c</fullName>
    <label>Internal Time Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>