unpackaged/main/default/objects/pse__Proj__c/fields/pse__Is_Primary_Estimate__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Primary_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this estimate is the primary version for the opportunity.</description>
    <inlineHelpText>Indicates that this estimate is the primary version for the opportunity.</inlineHelpText>
    <label>Deprecated:Primary Estimate</label>
    <type>Checkbox</type>
</CustomField>