unpackaged/main/default/objects/pse__Proj__c/fields/pse__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>