unpackaged/main/default/objects/pse__Proj__c/fields/pse__Jira_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Correlation_ID__c</fullName>
    <description>Unique identifier of the project or issue in Jira. Used for synchronization.</description>
    <inlineHelpText>Unique identifier of the project or issue in Jira. Used for synchronization.</inlineHelpText>
    <label>Jira Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>