unpackaged/main/default/objects/pse__Proj__c/fields/pse__Jira_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Project__c</fullName>
    <description>Picklist containing available Jira project keys. Key of the Jira project this project will be created as an issue for.</description>
    <inlineHelpText>Key of the Jira project this project will be created as an issue for.</inlineHelpText>
    <label>Jira Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>