unpackaged/main/default/objects/pse__Proj__c/fields/pse__Jira_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Project_Key__c</fullName>
    <description>Unique key of the project in Jira used to prefix issue keys.</description>
    <inlineHelpText>Unique key of the project in Jira used to prefix issue keys.</inlineHelpText>
    <label>Jira Project Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>