unpackaged/main/default/objects/pse__Proj__c/fields/pse__Jira_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Project_URL__c</fullName>
    <description>URL to the related project in Jira.</description>
    <formula>IF(pse__Sync_With_Jira__c &amp;&amp; !ISBLANK(pse__Jira_Correlation_ID__c) &amp;&amp; (ISPICKVAL(pse__Jira_Project__c , '') || ISPICKVAL(pse__Jira_Project__c , 'None')), HYPERLINK($Setup.pse__Integration_Hub_Connector_Jira_PSA__c.pse__Jira_Application_URL__c + '/browse/' + pse__Jira_Project_Key__c, 'View Project in Jira', '_blank'), IF(pse__Sync_With_Jira__c &amp;&amp; !ISBLANK(pse__Jira_Correlation_ID__c) &amp;&amp; (!ISBLANK(TEXT(pse__Jira_Project__c))), HYPERLINK($Setup.pse__Integration_Hub_Connector_Jira_PSA__c.pse__Jira_Application_URL__c + '/browse/' + TEXT(pse__Jira_Project__c), 'View Project in Jira', '_blank'),''))</formula>
    <inlineHelpText>URL to the related project in Jira.</inlineHelpText>
    <label>Jira Project URL</label>
    <type>Text</type>
</CustomField>