unpackaged/main/default/objects/pse__Proj__c/fields/pse__Milestone_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone_Cost__c</fullName>
    <label>Milestone Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>