unpackaged/main/default/objects/pse__Proj__c/fields/pse__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Net_Amount__c</fullName>
    <description>The estimated total amount for this estimate after discounts are applied.</description>
    <formula>pse__Amount__c - pse__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The estimated total amount for this estimate after discounts are applied.</inlineHelpText>
    <label>Deprecated:Net Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>