unpackaged/main/default/objects/pse__Proj__c/fields/pse__Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>