unpackaged/main/default/objects/pse__Proj__c/fields/pse__Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Immediate Sub-Projects</relationshipLabel>
    <relationshipName>ImmediateSubProjects</relationshipName>
    <type>Lookup</type>
</CustomField>