unpackaged/main/default/objects/pse__Proj__c/fields/pse__Percent_Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Estimated_Margin__c</fullName>
    <description>The estimated margin as a percentage of the total estimated amount.</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The estimated margin as a percentage of the total estimated amount.</inlineHelpText>
    <label>Deprecated:Estimated Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>