unpackaged/main/default/objects/pse__Proj__c/fields/pse__Percent_Hours_Complete__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Hours_Complete__c</fullName>
    <description>The percentage of hours already completed on the project. Calculated using Total Submitted Hours divided by Estimated Hours at Completion multiplied by 100.</description>
    <inlineHelpText>The percentage of hours already completed on the project. Calculated using Total Submitted Hours divided by Estimated Hours at Completion multiplied by 100.</inlineHelpText>
    <label>Percent Hours Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>