unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_ID__c</fullName>
    <displayFormat>PR-{000000}</displayFormat>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>