unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person responsible for this project (optional). If not provided, it's assumed that the record Owner is the project manager.</description>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects Managed</relationshipLabel>
    <relationshipName>ProjectsManaged</relationshipName>
    <type>Lookup</type>
</CustomField>