unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Name_Chain__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Name_Chain__c</fullName>
    <label>Project Name Chain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>