unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Type__c</fullName>
    <description>A descriptive classification of the project</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Customer Delivery</fullName>
            </value>
            <value>
                <fullName>Global Project</fullName>
            </value>
            <value>
                <fullName>Internal - Functional</fullName>
            </value>
            <value>
                <fullName>Internal -  Admin and Ops</fullName>
                <label>Internal - Admin and Ops</label>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
            <value>
                <fullName>Internal - Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>