unpackaged/main/default/objects/pse__Proj__c/fields/pse__Rate_Card_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Card_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
    <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
    <label>Rate Card Set</label>
    <referenceTo>pse__Rate_Card_Set__c</referenceTo>
    <relationshipLabel>Rate Card Set Projects</relationshipLabel>
    <relationshipName>Rate_Card_Set_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>