unpackaged/main/default/objects/pse__Proj__c/fields/pse__Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Remaining_Amount__c</fullName>
    <description>The bookings amount minus ready-to-bill records and any pre-billed amount.</description>
    <formula>IF( OR( pse__Bookings__c = 0.00, pse__Apply_Billing_Cap__c = false) , NULL , pse__Bookings__c - (pse__Billings__c + pse__Pre_Billed__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The bookings amount minus ready-to-bill records and any pre-billed amount.</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>