unpackaged/main/default/objects/pse__Proj__c/fields/pse__Revenue_Forecast_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Last_Updated__c</fullName>
    <description>Date and time when this revenue forecast was last updated.</description>
    <inlineHelpText>Date and time when this revenue forecast was last updated.</inlineHelpText>
    <label>Revenue Forecast Last Updated</label>
    <type>DateTime</type>
</CustomField>