unpackaged/main/default/objects/pse__Proj__c/fields/pse__Scheduled_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Hours_Remaining__c</fullName>
    <description>The number of hours not yet spent on a project. Calculated using assignments whose end date comes after the Hours Cut Off Date and takes into account scheduled hours and schedule exceptions.</description>
    <inlineHelpText>The number of hours not yet spent on a project. Calculated using assignments whose end date comes after the Hours Cut Off Date and takes into account scheduled hours and schedule exceptions.</inlineHelpText>
    <label>Scheduled Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>