unpackaged/main/default/objects/pse__Proj__c/fields/pse__Scope_Visual__c.field-meta.xml
<CustomField>
    <fullName>pse__Scope_Visual__c</fullName>
    <description>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</description>
    <formula>IF(ISPICKVAL(pse__Scope_Status__c,"Yellow"),IMAGE("/resource/pse__StatusImages/yellow.png","2-Yellow"),IF(ISPICKVAL(pse__Scope_Status__c,"Red"),IMAGE("/resource/pse__StatusImages/red.png","3-Red"),IF(ISPICKVAL(pse__Scope_Status__c,"Green"),IMAGE("/resource/pse__StatusImages/green.png","1-Green"),"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</inlineHelpText>
    <label>Scope Status</label>
    <type>Text</type>
</CustomField>