unpackaged/main/default/objects/pse__Proj__c/fields/pse__Share_with_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__Share_with_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, sharing rules are created for this record and its children so that the user designated as Project Manager has access to them.</description>
    <label>Share with Project Manager</label>
    <type>Checkbox</type>
</CustomField>