unpackaged/main/default/objects/pse__Proj__c/fields/pse__Share_with_Project_Resources__c.field-meta.xml
<CustomField>
    <fullName>pse__Share_with_Project_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to share certain project related objects like Milestones with resources that are assigned to the project</inlineHelpText>
    <label>Share with Project Team</label>
    <type>Checkbox</type>
</CustomField>