unpackaged/main/default/objects/pse__Proj__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <inlineHelpText>This is the estimated project start date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>